@@ -28,13 +28,13 @@ Download <a href="ipsvd-0.12.1.tar.gz">ipsvd-0.12.1.tar.gz</a> into
 If you are installing on Linux or MacOSX, and want to make the
 <a href="sslsvd.8.html">sslsvd</a> and <a href="sslio.8.html">sslio</a>
 programs available, download the
-<a href="http://www.matrixssl.org">matrixssl</a> library version 1.7.1
+<a href="http://www.matrixssl.org">matrixssl</a> library version 1.8.3
 (newer versions probably work too) and copy the archive to the
 <tt>src/matrixssl.tar.gz</tt> (alternatively download from the
 <a href="http://ftp.debian.org/debian/pool/main/m/matrixssl/">
 Debian archive</a>)
 <pre>
- # cp matrixssl-1-7-1-open.tar.gz src/matrixssl.tar.gz
+ # cp matrixssl-1-8-3-open.tar.gz src/matrixssl.tar.gz
 </pre>
 Now compile and install the <i>ipsvd</i> programs
 <pre>
